# vmti

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/: vmtibuilder.h  vmtimetadata.h
src/: main.cpp  vmtibuilder.cpp  vmtimetadata.cpp
tests/: test_main.cpp
